# markdown_aggregator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  main.py  pyproject.toml
.github/workflows/: release.yml
docs/: usage.md
markdownaggregator/: __init__.py  __main__.py  aggregator.py  cli.py
tests/: test_aggregator.py
