[project]
name = "markdownaggregator"
version = "0.1.0"
description = "Aggregate markdown trees or manifests into a single document with a generated table of contents."
readme = "README.md"
authors = [
    { name = "Stéphane Apiou", email = "stephane_nospam@apiou.org" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["markdown", "documentation", "aggregator", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stefapi/markdownaggregator"
"Bug Tracker" = "https://github.com/stefapi/markdownaggregator/issues"
Repository = "https://github.com/stefapi/markdownaggregator.git"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[project.scripts]
markdownaggregator = "markdownaggregator.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
strict = true
mypy_path = "."

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --disable-warnings --maxfail=1"
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["markdownaggregator"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["markdownaggregator"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
